; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_mm.c_drm_mm_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_mm.c_drm_mm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_mm = type { i64, %struct.TYPE_2__, i32, i8*, i8*, i32, i32* }
%struct.TYPE_2__ = type { i32, i64, i64, %struct.drm_mm*, i32 }

@RB_ROOT_CACHED = common dso_local global i8* null, align 8
@RB_ROOT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_mm_init(%struct.drm_mm* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.drm_mm*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.drm_mm* %0, %struct.drm_mm** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %6, align 8
  %9 = add nsw i64 %7, %8
  %10 = load i64, i64* %5, align 8
  %11 = icmp sle i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @DRM_MM_BUG_ON(i32 %12)
  %14 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %15 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %14, i32 0, i32 6
  store i32* null, i32** %15, align 8
  %16 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %17 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %16, i32 0, i32 5
  %18 = call i32 @INIT_LIST_HEAD(i32* %17)
  %19 = load i8*, i8** @RB_ROOT_CACHED, align 8
  %20 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %21 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %20, i32 0, i32 4
  store i8* %19, i8** %21, align 8
  %22 = load i8*, i8** @RB_ROOT_CACHED, align 8
  %23 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %24 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %23, i32 0, i32 3
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* @RB_ROOT, align 4
  %26 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %27 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 8
  %28 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %29 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 4
  %31 = call i32 @INIT_LIST_HEAD(i32* %30)
  %32 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %33 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  store i32 0, i32* %34, align 8
  %35 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %36 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %37 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %36, i32 0, i32 1
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 3
  store %struct.drm_mm* %35, %struct.drm_mm** %38, align 8
  %39 = load i64, i64* %5, align 8
  %40 = load i64, i64* %6, align 8
  %41 = add nsw i64 %39, %40
  %42 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %43 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 2
  store i64 %41, i64* %44, align 8
  %45 = load i64, i64* %6, align 8
  %46 = sub nsw i64 0, %45
  %47 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %48 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %47, i32 0, i32 1
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 1
  store i64 %46, i64* %49, align 8
  %50 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %51 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %50, i32 0, i32 1
  %52 = call i32 @add_hole(%struct.TYPE_2__* %51)
  %53 = load %struct.drm_mm*, %struct.drm_mm** %4, align 8
  %54 = getelementptr inbounds %struct.drm_mm, %struct.drm_mm* %53, i32 0, i32 0
  store i64 0, i64* %54, align 8
  ret void
}

declare dso_local i32 @DRM_MM_BUG_ON(i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @add_hole(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
